@@ -12,6 +12,7 @@ commands=nosetests
 [testenv:py27]
 deps=
     {[testenv]deps}
+    mock>=1.3.0
 
 [testenv:py26]
 deps=
@@ -29,4 +30,4 @@ deps=
 
 [testenv:pypy]
 deps=
-    {[testenv:py33]deps}
+    {[testenv:py27]deps}
